RESOLVED FIXED93058
[EFL] Fix wrong assigned value of BatteryStatus
https://bugs.webkit.org/show_bug.cgi?id=93058
Summary [EFL] Fix wrong assigned value of BatteryStatus
Kihong Kwon
Reported 2012-08-02 18:35:08 PDT
In the bug 92964, level variable position is wrong. We need to move the position of level.
Attachments
Patch (1.66 KB, patch)
2012-08-02 18:40 PDT, Kihong Kwon
no flags
Kihong Kwon
Comment 1 2012-08-02 18:40:04 PDT
Ryuan Choi
Comment 2 2012-08-02 18:45:25 PDT
This regression should be fixed. Looks fine to me now.
Kentaro Hara
Comment 3 2012-08-02 18:48:28 PDT
Comment on attachment 156234 [details] Patch Looks OK
WebKit Review Bot
Comment 4 2012-08-02 19:40:29 PDT
Comment on attachment 156234 [details] Patch Clearing flags on attachment: 156234 Committed r124552: <http://trac.webkit.org/changeset/124552>
WebKit Review Bot
Comment 5 2012-08-02 19:40:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.