[EFL] Fix wrong assigned value of BatteryStatus https://bugs.webkit.org/show_bug.cgi?id=93058

Patch by Kihong Kwon <kihong.kwon@samsung.com> on 2012-08-02
Reviewed by Kentaro Hara.

There is a wrong change in the bug 92964.
property variable have to be used after assigned value in the setBatteryClient.

* platform/efl/BatteryProviderEfl.cpp:
(WebCore::BatteryProviderEfl::setBatteryClient):

Canonical link: https://commits.webkit.org/110901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124552 268f45cc-cd09-0410-ab3c-d52691b4dbfc